update html title and create h1 tag

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Les Pizza Géantes</title>
+    <title>ShareZza</title>
   </head>
   <body>
-  
+    <h1>Les Pizza Géantes<h1>
   </body>
 </html>
