--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>ShareZza</title>
   </head>
   <body>
-    <h1>Les Pizza Géantes<h1>
+    <h1>Les Pizza Géantes</h1>
       
-      <h2>Les meilleurs Pizzas du monde<h2>
+      <h2>Les meilleurs Pizzas du monde</h2>
   </body>
 </html>
